/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)
===============================================================================

2007-12-27  Gilles Dumortier <dgil at ieee dot org>
	* Yahoo / Recent values : no historical prices (SF bug 1842520)
	* EURONEXT list of quotes not working anymore (SF bug 1829243)
	* Import error with LSE SETS , LSE SETSmm (SF bug 1847378)
	* NYSE list of quotes not working anymore (SF bug 1851229)

2007-12-18  Michel Legrand <m_leg at users dot sourceforge dot net>
	* last IPOs december 2007
	* fix an issue for volume==0 in yahoo import connector

2007-11-03  Michel Legrand <m_leg at users dot sourceforge dot net>
	* More logo

2007-10-01  Michel Legrand <m_leg at users dot sourceforge dot net>
	* update manually Milan Stock Exchange
	  (http://www.borsaitaliana.it/bitApp/quotes.bit?target=SearchQuotes&grp=iniziale&param=A)

2007-09-30  Jean-Marie Pacquet <jmpacquet at users dot sourceforge dot net>
	* Patch for changed StaticText into TextCtrl to allow background color
	  update (SF bug 1804076)

2007-09-24  Jean-Marie Pacquet <jmpacquet at users dot sourceforge dot net>
	* Patch for Market indicator missing (SF Bug 1795105)

2007-09-21  Jean-Marie Pacquet <jmpacquet at users dot sourceforge dot net>
	* ./INSTALL : add installation from sources on linux-slackware

2007-09-14  Gilles Dumortier <dgil at ieee dot org>
	* new tarball
	* Commit many Linux patches from Jean-Marie Pacquet :
	- fix "TypeError: category LC_ALL is not supported" (SF bug 1759799)
	- fix "File/New does not work" (SF bug 1793957)
	- fix "Small display bugs" (SF bug 1793964)

2007-08-25  Michel Legrand <m_leg at users dot sourceforge dot net>
	* More logo
	* More Portuguese translations

2007-08-20  Gilles Dumortier <dgil at ieee dot org>
	* [Fedora] Can't add new quote in matrix (SF bug 1774326)

2007-07-25  Gilles Dumortier <dgil at ieee dot org>