@@ -13,19 +13,7 @@ to thanks you :-)
 
 ===============================================================================
 
-2007-02-15  Anonymous donor
-
-2007-02-02  Anonymous donor
-
-2007-01-30  Anonymous donor
-
-2007-01-27  Anonymous donor
-
-2007-01-25  Anonymous donor
-
-2007-01-18  Anonymous donor
-
-2007-01-03  Anonymous donor
+2007  	    Many Anonymous donors
 
 2006-12-28  Michel Legrand (http://sourceforge.net/users/m_leg/)
 
