@@ -12,7 +12,7 @@ From iTrade source package, we recommend you to install :
  Python      http://www.python.org                    v 2.5 or better
  wxPython    http://www.wxpython.org                  v 2.8.x or better (UNICODE)
  numpy       http://sourceforge.net/projects/numpy    v 1.0 or better
- matplotlib  http://matplotlib.sourceforge.net        v 0.90.x or better
+ matplotlib  http://matplotlib.sourceforge.net        v 0.91.x or better
  xlrd        http://www.lexicon.net/sjmachin/xlrd.htm v 0.6.1 or better
 
 Attention :
