@@ -1,7 +1,7 @@
 /iTrade/LICENSE
 ===============================================================================
 
-    iTrade is Copyright(c) 2004-2007 Gilles Dumortier & all - see file AUTHORS
+    iTrade is Copyright(c) 2004-2008 Gilles Dumortier & all - see file AUTHORS
 
 	open source project at http://itrade.sourceforge.net
 
