@@ -48,6 +48,7 @@ import wx.lib.mixins.listctrl as wxl
 from itrade_logging import *
 from itrade_local import message
 
+# iTrade wxPython system
 from itrade_wxutil import iTradeInformation,iTradeError
 
 # ============================================================================
